[package]
name = "keystone"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8.6"
vst3-sys = { path = "../external/vst3-sys"}
vst3-com = { path = "../external/vst3-sys/com" }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
chrono = "0.4.39"
log = "0.4.26"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi"
] }
asio-sys = "0.2.2"
